--- a/templates/modelo.html
+++ b/templates/modelo.html
@@ -29,13 +29,13 @@
              <a class="nav-link text-white" href="{{ url_for('home.home') }}"><i class="fas fa-home"></i> HOME<span class="sr-only"></span></a>
            </li>
            <li class="nav-item">
-             <a class="nav-link text-white" href="{{ url_for('funcionario.formListaFuncionarios') }}"><i class="fas fa-users"></i> FUNCIONÁRIOS</a>
+             <a class="nav-link text-white" href="{{ url_for('funcionario.indexFunc') }}"><i class="fas fa-users"></i> FUNCIONÁRIOS</a>
            </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="{{ url_for('produto.formListaProduto') }}"><i class="fas fa-store-alt"></i> PRODUTOS</a>
+              <a class="nav-link text-white" href="{{ url_for('produto.listaProduto') }}"><i class="fas fa-store-alt"></i> PRODUTOS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="{{ url_for('cliente.formListaClientes') }}"><i class="fas fa-user-friends"></i> CLIENTES</a>
+              <a class="nav-link text-white" href="{{ url_for('cliente.index') }}"><i class="fas fa-user-friends"></i> CLIENTES</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
