--- a/mod_cliente/templates/formCadastroCliente.html
+++ b/mod_cliente/templates/formCadastroCliente.html
@@ -5,6 +5,12 @@
 {% block style %}{% endblock %}
   
 {% block content %}
+{% if cliente.id_cliente == 0 %}    
+    <form name="cliente" method="POST" action="{{ url_for('cliente.addCliente') }}">
+{% else %}
+    <h1>Editar Cliente: {{ cliente.id_cliente }}</h1>
+    <form name="cliente" method="POST" action="{{ url_for('cliente.editCliente') }}">
+{% endif %}
 
     <div class="col-10">
         <br>
@@ -25,36 +31,36 @@
         <div class="form-row">
           <div class="form-group col-md-2">
             <label for="id_funcionario">ID:</label>
-            <input readonly value="" class="form-control" type="text" name="id_funcionario" id="id_funcionario">
+            <input readonly value="{{ cliente.id_cliente }}" class="form-control" type="text" name="id_cliente" id="id_cliente">
           </div>
           <div class="form-group col-md-10">
             <label for="nome">Nome:</label>
-            <input value="" class="form-control" type="text" name="nome" id="nome" maxlength="100" autofocus required>
+            <input value="{{ cliente.nome }}" class="form-control" type="text" name="nome" id="nome" maxlength="100" autofocus required>
           </div>
         </div>
         <div class="form-row">
           <div class="form-group col-md-4">
             <label for="cpf">CPF:</label>
-            <input value="" class="form-control" type="text" name="cpf" id="cpf" maxlength="11" required>
+            <input value="{{ cliente.cpf }}" class="form-control" type="text" name="cpf" id="cpf" maxlength="11" required>
           </div>
           <div class="form-group col-md-4">
             <label for="telefone">Telefone:</label>
-            <input value="" class="form-control" type="text" name="telefone" id="telefone" maxlength="11" required>
+            <input value="{{ cliente.telefone }}" class="form-control" type="text" name="telefone" id="telefone" maxlength="11" required>
           </div>
           <div class="form-group col-md-4">
-            <label for="dataPagamento">Data de Pagamento:</label>
-            <input value="" class="form-control" type="date" name="dataPagamento" id="dataPagamento" required>
+            <label for="data_pagamento">Data de Pagamento:</label>
+            <input value="{{ cliente.data_pagamento }}" class="form-control" type="date" name="data_pagamento" id="data_pagamento" required>
           </div>
         </div>
         
         <div class="form-row">
           <div class="form-group col-md-5">
             <label for="senha">Senha:</label>
-            <input value="" class="form-control" type="text" name="senha" id="senha" maxlength="200" required>
+            <input value="{{ cliente.senha }}" class="form-control" type="text" name="senha" id="senha" maxlength="200" required>
           </div>
           <div class="form-group col-md-4">
-            <label for="bairro">Confirmar senha:</label>
-            <input value="" class="form-control" type="text" name="bairro" id="bairro" maxlength="80" required>
+            <label for="senha">Confirmar senha:</label>
+            <input value="{{ cliente.senha }}" class="form-control" type="text" name="senha" id="senha" maxlength="80" required>
           </div>
           <div class="form-group col-md-12">
             <!-- Button trigger modal -->
@@ -74,15 +80,15 @@
                   <div class="modal-body">
                     <div class="form-group col-md-10">
                       <label for="senhaAtual">Senha Atual:</label>
-                      <input value="" class="form-control" type="text" name="senhaAtual" id="senhaAtual" maxlength="200" autofocus required>
+                      <input value="{{ cliente.senha }}" class="form-control" type="text" name="senhaAtual" id="senhaAtual" maxlength="200" autofocus required>
                     </div>
                     <div class="form-group col-md-10">
                       <label for="novaSenha">Nova senha:</label>
-                      <input value="" class="form-control" type="text" name="novaSenha" id="novaSenha" maxlength="200" required>
+                      <input value="{{ cliente.senha }}" class="form-control" type="text" name="novaSenha" id="novaSenha" maxlength="200" required>
                     </div>
                     <div class="form-group col-md-10">
                       <label for="confirmarSenha">Confirmar senha:</label>
-                      <input value="" class="form-control" type="text" name="confirmarSenha" id="confirmarSenha" maxlength="200" required>
+                      <input value="{{ cliente.senha }}" class="form-control" type="text" name="confirmarSenha" id="confirmarSenha" maxlength="200" required>
                     </div>
                     <div class="form-group col-md-10">
                       <button type="button" class="btn btn-primary">Salvar</button>    
@@ -99,24 +105,34 @@
             <div class="card-body">
               <div class="form-row">
                 <div class="form-group col-md-6">
-                  <label for="fiador">Fiador:</label>
-                  <select value="" class="form-control" type="text" name="fiado" id="fiado" required>
-                    <option value="" name="sim" id="admin">Não</option>
-                    <option value="" name="nao" id="balcao">Sim</option>
+                  <label for="compra_fiado">Fiador:</label>
+                  <select value="{{ cliente.compra_fiado }}" class="form-control" type="text" name="compra_fiado" id="compra_fiado" required>
+                    <option value="{{ cliente.compra_fiado }}" name="nao" id="admin">Não</option> 
+                    <option value="{{ cliente.compra_fiado }}" name="nao" id="balcao">Sim</option>
                   </select>
                 </div>
                 <div class="form-group col-md-6">
-                  <label for="email">Data de Pagamento:</label>
-                  <input value="" class="form-control" type="date" name="dataPagamento" id="dataPagamento">
+                  <label for="data_pagamento">Data de Pagamento:</label>
+                  <input value="data_pagamento" class="form-control" type="date" name="data_pagamento" id="data_pagamento">
                 </div>
               </div>
             </div>
           </div>  
         </div>
         <br><br><br>
-        <button type='submit' class="btn btn-primary" name='salvaInsereUsuarioDB' id='salvaInsereUsuarioDB'>Salvar</button>
-        <button type='submit' class="btn btn-primary" name='salvaEditaUsuarioDB' id='salvaEditaUsuarioDB'>Editar</button>
-      </form>
+        {% if cliente.id_cliente == 0 %}
+          <div class="col">
+               <button type='submit' name='salvaInsereUsuarioDB' id='salvaInsereUsuarioDB' class="btn btn-outline-success"><i class="fas fa-save"></i>Salvar</button>             
+           </div>
+
+        {% else %}                                    
+          <div class="col"> 
+            <div class="form-group">
+              <button type='submit' name='salvaEditaUsuarioDB' id='salvaEditaUsuarioDB' class="btn btn-outline-success"><i class="fas fa-save"></i>Salvar</button>
+                 <button type='submit' name='salvaExcluiUsuarioDB' id='salvaExcluiUsuarioDB'class="btn btn-outline-danger"><i class="far fa-trash-alt"></i>Excluir</button>
+           </div>                      
+          </div> 
+        {% endif %}
       <br>
       <br>
     </div>
